wip: side slider

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "xc": "xed -b ios"
   },
   "dependencies": {
-    "@react-native-community/slider": "^3.0.3",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-vector-icons": "^7.1.0",
+    "rn-vertical-slider": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
